# CSG

./: Arrow.cpp  Arrow.h  Box.h  Cartesian.cpp  CartesianCoordinatesSurface.cpp  CartesianCoordinatesSurface.h  ChangeLog  Curve.cpp  Curve.h  IcosahedralSphere.cpp  IcosahedralSphere.h  Line.h  Makefile.am  Polar.cpp  PolarCoordinatesSurface.cpp  PolarCoordinatesSurface.h  README  SphericalSphere.cpp  SphericalSphere.h  SphericalSurface.cpp  SphericalSurface.h  Surface.cpp  Surface.h  common.cpp  common.h  configure.ac  configureit  debug.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.cpp  timekeeper.cpp  timekeeper.h
app/: Makefile.am
app/helix/: Makefile.am  helix.cpp
app/pde1/: Makefile.am  axes.cpp  axes.h  characteristics.cpp  characteristics.h  curves.cpp  curves.h  parameters.h  pde1.cpp  solution.cpp  solution.h  support.cpp  support.h
app/pde2/: Makefile.am  axes.cpp  axes.h  characteristics.cpp  characteristics.h  initialcurve.cpp  initialcurve.h  parameters.h  pde2.cpp  solution.cpp  solution.h  support.cpp  support.h
app/pde3/: Makefile.am  axes.cpp  characteristics.cpp  characteristics.h  parameters.h  pde3.cpp  solution.cpp  solution.h  support.cpp  support.h
examples/: Makefile.am  example2.cpp  example3.cpp  example6.cpp
include/: Cartesian.h  Curve.h  Line.h  Makefile.am  Parts.h  Polar.h  common.h  debug.h  hyperbola.h
lib/: Box.cpp  Cartesian.cpp  Curve.cpp  Line.cpp  Makefile.am  Parts.cpp  Polar.cpp  SphericalSphere.cpp  SphericalSurface.cpp  common.cpp  hyperbola.cpp
