#
# Makefile.am -- tools to prepare mathematical models for 3D printing 
#
# (c) 2014 Prof Dr Andreas Mueller, Hochschule Rapperswil
#

include_HEADERS = common.h timekeeper.h	debug.h				\
	Surface.h							\
	Cartesian.h							\
	Polar.h								\
	IcosahedralSphere.h						\
	SphericalSphere.h						\
	SphericalSurface.h						\
	Arrow.h								\
	Curve.h								\
	Line.h								\
	Box.h								\
	Parts.h								\
	hyperbola.h

