#
# Makefile.am -- tools to prepare mathematical models for 3D printing 
#
# (c) 2014 Prof Dr Andreas Mueller, Hochschule Rapperswil
#
lib_LTLIBRARIES = libcsg.la

libcsg_la_SOURCES = common.cpp timekeeper.cpp debug.cpp			\
	Surface.cpp							\
	Cartesian.cpp							\
	Polar.cpp							\
	IcosahedralSphere.cpp						\
	SphericalSphere.cpp						\
	SphericalSurface.cpp						\
	Arrow.cpp							\
	Curve.cpp							\
	Line.cpp							\
	Box.cpp

